refactor: Remove trailing slashes from project API endpoints; update requirements.txt to include beautifulsoup4 and pathspec

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,8 @@ autogen-ext[openai]==0.7.5
 requests==2.32.3
 aiohttp==3.11.11
 PyYAML
+beautifulsoup4==4.12.3
+pathspec
 
 # Screenshot capture
 playwright==1.48.0
