feat: add multimodal file attachment support for projects and chat
- Introduced FileAttachment models in backend for handling images and PDFs.
- Updated ProjectFromMessageRequest and ChatRequest to include attachments.
- Implemented file validation and processing in the chat service.
- Enhanced ChatPanel and Editor components to support file uploads and previews.
- Added utility functions for image and PDF processing.
- Updated API service to handle attachments in chat messages.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,5 +33,8 @@ PyYAML
 beautifulsoup4==4.12.3
 pathspec
 
+# Image processing (for multimodal)
+Pillow==11.0.0
+
 # Screenshot capture
 playwright==1.48.0
